Set image and version of generated docker image (#54)