@@ -26,6 +26,7 @@ val quarkusPlatformVersion: String by project
 
 dependencies {
     implementation(enforcedPlatform("${quarkusPlatformGroupId}:${quarkusPlatformArtifactId}:${quarkusPlatformVersion}"))
+    implementation("io.quarkus:quarkus-container-image-docker")
     implementation("io.quarkus:quarkus-resteasy-reactive")
     implementation("io.quarkus:quarkus-resteasy-reactive-jackson")
     implementation("io.quarkus:quarkus-arc")
@@ -77,9 +78,9 @@ tasks.withType<JavaCompile> {
 }
 
 tasks.quarkusBuild {
-    nativeArgs {
-        "additional-build-args" to "-H:-CheckToolchain"
-    }
+    System.setProperty("quarkus.container-image.group", project.group.toString())
+    System.setProperty("quarkus.container-image.additional-tags", "latest")
+    System.setProperty("quarkus.native.additional-build-args", "-H:-CheckToolchain,--enable-preview")
 }
 
 spotless {
@@ -87,7 +88,6 @@ spotless {
         targetExclude("${relativeGeneratedCodeDirectory(layout, openApiCodeGenDir)}/**/*.java")
     }
 }
-
 sourceSets {
     getByName("main") {
         java {
